--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
   background-image:
-    url(assets/bg.png),
+    url(/assets/bg.png),
     repeating-linear-gradient(to right, transparent 0 500px, #73814B33 500px 501px);
   background-size: 100%;
 }
