--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,17 @@ body {
   background-repeat: no-repeat;
 }
 
+#loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  background-color: black;
+}
+
 *::-webkit-scrollbar {
   width: 0;
 }
